# learn_wgpu3

./: Cargo.toml
assets/: cube.glb
src/: app.rs  cache.rs  camera_uniform.rs  canvas.rs  input_context.rs  lib.rs  light_uniform.rs  main.rs  mesh_meta.rs  model_data.rs  model_info.rs  model_instance.rs  model_meta.rs  my_camera.rs  my_texture.rs  opaque.wgsl  opaque_mesh_data.rs  opaque_mesh_info.rs  opaque_mesh_instance.rs  opaque_mesh_model.rs  opaque_pipeline.rs  render_context.rs  state.rs  ui.rs  ui.wgsl  ui_node.rs  ui_pipeline.rs  ui_renderable.rs  vertex.rs
src/ui/: button.rs  mod.rs  span.rs  text.rs  ui_button.rs  ui_char.rs  ui_span.rs  ui_text.rs
